Fixing images stretch

--- a/Styles/_job.scss
+++ b/Styles/_job.scss
@@ -173,7 +173,7 @@ $darktext: rgb(121, 121, 121);
                     height: 15rem;
                     margin: 1rem 0rem;
                     img{
-                        border-radius: 5px;
+                        border-radius: 10px;
                         height: 100%;
                         width: 100%;
                         object-fit: contain;
