--- a/Styles/style.css
+++ b/Styles/style.css
@@ -19735,7 +19735,7 @@ li {
 }
 
 .job .job-container .jobCard .imageCard .image img {
-  border-radius: 5px;
+  border-radius: 10px;
   height: 100%;
   width: 100%;
   -o-object-fit: contain;
